# FlyingRects

./: CMakeLists.txt  config.txt  main.cpp
